# finance-rag-assistant-v2

./: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  pyproject.toml  tox.ini
notebooks/: .gitignore  chunk_markdown.ipynb  cleaned.html  doc_processing.ipynb  markdown.md  markdown_32k_forceocr.md  markdown_32k_temp0.15.md  markdown_32kcontext.md  markdown_olmocr_temp0.15_noprompt.md
scripts/: __init__.py  _env.sh  align_judge.py  build_index.py  build_index.sh  bulk_test.py  chunk.py  chunk.sh  download.py  download.sh  ingest.py  ingest.sh  inspect_collection.py  inspect_collection.sh  launch_app.sh  make_eval_set.py  make_eval_set.sh  milvus_example_hybrid_search.py  otelcol-config.yaml  process_html_to_markdown.py  process_html_to_markdown.sh  run_eval.py  run_eval.sh  score_eval.py  serve_otelcol.sh  serve_vllm.sh  test_olmocr.py  test_vllm.sh
src/finrag/: __init__.py  chunk_postprocess.py  chunking.py  context_support.py  dataclasses.py  env.py  generation_controls.py  hf_token_count.py  llm_clients.py  main.py  ocr.py  qa.py  retriever.py  streaming.py  telemetry.py  utils.py
src/finrag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/finrag/eval/: __init__.py  generation.py  io.py  judges.py  metrics.py  report.py  runner.py  schema.py  scoring.py  sec_corpus.py
src/finrag/static/: index.html
